# plugin-fix-visibility

./: .bazelrc  BUILD.bazel  CONTRIBUTING.md  LICENSE  README.md  WORKSPACE  go.bzl  go.mod  go.sum  plugin.go
.aspect/cli/: config.yaml  plugins.yaml
.github/workflows/: ci.bazelrc  default.yml  release.yml  release_notes.txt
example/: BUILD.bazel
release/: BUILD.bazel  release.bzl
