load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("//release:release.bzl", "local_plugin")

# Run this target to update the go_* rules in this file
# bazel run //:gazelle
# gazelle:resolve go github.com/bazelbuild/buildtools/edit @com_github_bazelbuild_buildtools//edit:go_default_library
gazelle(name = "gazelle")

# Run this target to update the go.bzl file in this folder
# bazel run //:update_go_deps
gazelle(
    name = "update_go_deps",
    args = [
        "-from_file=go.mod",
        "-to_macro=go.bzl%deps",
        "-prune",
    ],
    command = "update-repos",
)

# gazelle:prefix github.com/aspect-build/plugin-fix-visibility
go_library(
    name = "plugin-fix-visibility_lib",
    srcs = ["plugin.go"],
    importpath = "github.com/aspect-build/plugin-fix-visibility",
    visibility = ["//:__subpackages__"],
    deps = [
        "@bazel_gazelle//label:go_default_library",
        "@build_aspect_cli//bazel/buildeventstream",
        "@build_aspect_cli//pkg/ioutils",
        "@build_aspect_cli//pkg/plugin/sdk/v1alpha3/config",
        "@build_aspect_cli//pkg/plugin/sdk/v1alpha3/plugin",
        "@com_github_bazelbuild_buildtools//edit:go_default_library",
        "@com_github_hashicorp_go_plugin//:go-plugin",
        "@com_github_manifoldco_promptui//:promptui",
    ],
)

# Only used for local development.
# Release binaries are created by the target in /release
go_binary(
    name = "plugin-fix-visibility",
    embed = [":plugin-fix-visibility_lib"],
    visibility = ["//visibility:public"],
)

# Copy the plugin to bazel-bin/plugin and checksum it.
# Referenced by the .aspect/cli/plugins.yaml in the `From:` line.
local_plugin(
    name = "dev",
    binary = ":plugin-fix-visibility",
    path = "plugin",
)
