"Targets used by the automation in .github/workflows/release.yml"
load(":release.bzl", "multi_platform_binaries", "release")

# Build a plugin for all supported platforms
multi_platform_binaries(
    # This name will determine what users put in their .aspect/cli/plugins.yaml:
    # - name: hello-world
    name = "hello-world",
    embed = ["//:aspect-cli-plugin-template_lib"],
)

release(
    name = "release",
    targets = [":hello-world"],
)
